--- a/index.html
+++ b/index.html
@@ -107,6 +107,9 @@
         </div>
 
     </div>
+    <footer>
+        <p>Main St, bruteberry, Dublin, Co. HP - Copyright 2022©</p>
+    </footer>
     
 </body>
 </html>
